--- a/com.apress.books/.project
+++ b/com.apress.books/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.apress.books</name>
+	<name>com.apress.books.model</name>
 	<comment></comment>
 	<projects>
 	</projects>
