--- a/com.apress.books.dao.mysql/.classpath
+++ b/com.apress.books.dao.mysql/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Software/MySQL Connector Java 5.1.40/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/cguevara_aguilar/Documents/workspace/MySqlJConnector/mysql-connector-java-3.0.17-ga-bin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.model"/>
 	<classpathentry kind="output" path="bin"/>
