--- a/com.apress.books.bookWeb/.classpath
+++ b/com.apress.books.bookWeb/.classpath
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_111">
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao.mysql"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.model"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/Software/MySQL Connector Java 5.1.40/mysql-connector-java-5.1.40-bin.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao.mysql"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.model"/>
+	<classpathentry kind="lib" path="/Users/carlosernestoguevaraaguilar/Documents/workspace/mysql-connector-java-3.0.17-ga-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
