--- a/struts2bookStore/pom.xml
+++ b/struts2bookStore/pom.xml
@@ -17,9 +17,13 @@
 	    <groupId>org.apache.struts</groupId>
 	    <artifactId>struts2-core</artifactId>
 	    <version>2.5.5</version>
-	</dependency>
+    </dependency>
   </dependencies>
   <build>
     <finalName>struts2bookStore</finalName>
   </build>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <packaging>war</packaging>
 </project>
