--- a/struts2bookStore/.classpath
+++ b/struts2bookStore/.classpath
@@ -33,5 +33,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.dao.mysql"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.apress.books.model"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
