--- a/struts2bookStore/pom.xml
+++ b/struts2bookStore/pom.xml
@@ -18,6 +18,16 @@
 	    <artifactId>struts2-core</artifactId>
 	    <version>2.5.5</version>
     </dependency>
+    <dependency>
+	    <groupId>org.apache.struts</groupId>
+	    <artifactId>struts2-tiles3-plugin</artifactId>
+	    <version>2.3.31</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-log4j12</artifactId>
+	    <version>1.7.21</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>struts2bookStore</finalName>
