--- a/struts2bookStore/src/main/webapp/WEB-INF/web.xml
+++ b/struts2bookStore/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,31 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+  <context-param>
+  
+  	<param-name>org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG</param-name>
+  	<param-value>/WEB-INF/tiles.xml</param-value>
+  </context-param>
+  
   <filter>
+  
   	<filter-name>struts2</filter-name>
   	<filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
+  
   <filter-mapping>
+  
   	<filter-name>struts2</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <listener>
+  
+  	<listener-class>org.apache.tiles.extras.complete.CompleteAutoloadTilesListener</listener-class>
+  </listener>
+  
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
